Cache Aside Inter-Service-HTTP